--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    .
+    <meta name="description" content="First HTML class" />
     <title>My First WebPage</title>
   </head>
   <body>
-    <h1>Hi Lavog</h1>
-    <h2>Hi Lavog</h2>
-    <h3>Hi Lavog</h3>
-    <h4>Hi Lavog</h4>
-    <h5>Hi Lavog</h5>
-    <h6>Hi Lavog</h6>
+    <h1>Hi Lavi</h1>
+    <h2>Hi Lavi</h2>
+    <h3>Hi Lavi</h3>
+    <h4>Hi Lavi</h4>
+    <h5>Hi Lavi</h5>
+    <h6>Hi Lavi</h6>
   </body>
 </html>
