--- a/secondLecture.html
+++ b/secondLecture.html
@@ -18,6 +18,7 @@
 
     <p>This text is <b>bold</b>.</p>
     <p>This text is <i>italic</i>.</p>
+    <p>This text is <i>italic</i>.</p>
     <p>This text is <s>struck</s>.</p>
     <p>This text is <u>underlined</u>.</p>
     <p>This text is <small>small</small>.</p>
