--- a/secondLecture.html
+++ b/secondLecture.html
@@ -6,21 +6,120 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- Paragraph  -->
+    <h1>Second html class</h1>
+    <h1>Hi Lavi</h1>
+    <h2>Hi Lavi</h2>
+    <h3>Hi Lavi</h3>
+    <h4>Hi Lavi</h4>
+    <h5>Hi Lavi</h5>
+    <h6>Hi Lavi</h6>
+
+    <!-- paragraph -->
+
+    <!-- formatting text -->
     <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut sed illo
-      ratione fuga sunt quos error obcaecati maxime velit? Omnis illum eos
-      facilis autem possimus modi non sapiente corrupti libero aliquid,
-      repudiandae consectetur esse neque quo soluta nobis ratione voluptatibus
+      Lorem <b>ipsum</b> <i>dolor</i> <s>sit</s> amet, consectetur adipisicing
+      elit.<u>Aperiam</u> lavi <small>reprehenderit</small> ?
     </p>
 
-    <!--  Text Emphasis-->
+    <b
+      >Lavi
+      <p>Front end devloper</p>
+    </b>
 
-    <p>This text is <b>bold</b>.</p>
-    <p>This text is <i>italic</i>.</p>
-    <p>This text is <i>italic</i>.</p>
-    <p>This text is <s>struck</s>.</p>
-    <p>This text is <u>underlined</u>.</p>
-    <p>This text is <small>small</small>.</p>
+    <!-- text emphasis -->
+    <p>
+      <strong>Lorem</strong> ipsum <em>dolor</em>, <mark>sit</mark> amet
+      consectetur <ins>adipisicing</ins> elit. <del>Nostrum</del> vitae facere
+      maxime blanditiis <sup>eaque</sup> ullam <sub>ea</sub> consequatur esse,
+      id expedita.
+    </p>
+
+    <!-- block elements  -->
+    <p style="background: red">Lavi rastogi - paragraph</p>
+    <div>Lavi rastogi - div</div>
+
+    <span style="background: yellow">
+      chhavi rastogi
+      <div style="background: pink">paragraph</div>
+      Lavi rastogi - paragraph</span
+    >
+    <div>Lavi rastogi - div</div>
+    <p>Lavi rastogi - paragraph</p>
+    <div>Lavi rastogi - div</div>
+    <p>Lavi rastogi - paragraph</p>
+    <div>Lavi rastogi - div</div>
+    <p>Lavi rastogi - paragraph</p>
+    <div>Lavi rastogi - div</div>
+
+    <!-- inline elements -->
+    Lorem <b>ipsum</b> <i>dolor</i> <s>sit</s> amet, consectetur adipisicing
+    elit.<u>Aperiam</u> lavi <small>reprehenderit</small> ?
+
+    <hr />
+  </body>
+  <body>
+    <h1>Second html class</h1>
+    <h1>Hi Lavi</h1>
+    <h2>Hi Lavi</h2>
+    <h3>Hi Lavi</h3>
+    <h4>Hi Lavi</h4>
+    <h5>Hi Lavi</h5>
+    <h6>Hi Lavi</h6>
+
+    <!-- paragraph -->
+
+    <!-- formatting text -->
+    <p>
+      Lorem <b>ipsum</b> <i>dolor</i> <s>sit</s> amet, consectetur adipisicing
+      elit.<u>Aperiam</u> lavi <small>reprehenderit</small> ?
+    </p>
+
+    <b
+      >Lavi
+      <p>Front end devloper</p>
+    </b>
+
+    <!-- text emphasis -->
+    <p>
+      <strong>Lorem</strong> ipsum <em>dolor</em>, <mark>sit</mark> amet
+      consectetur <ins>adipisicing</ins> elit. <del>Nostrum</del> vitae facere
+      maxime blanditiis <sup>eaque</sup> ullam <sub>ea</sub> consequatur esse,
+      id expedita.
+    </p>
+
+    <!-- block elements  -->
+    <p style="background: red">Lavi rastogi - paragraph</p>
+    <div>Lavi rastogi - div</div>
+
+    <span style="background: yellow">
+      chhavi rastogi
+      <div style="background: pink">paragraph</div>
+      Lavi rastogi - paragraph <b>ddd</b></span
+    >
+    <div>Lavi rastogi - div</div>
+    <p>Lavi rastogi - paragraph</p>
+    <div>Lavi rastogi - div</div>
+    <p>Lavi rastogi - paragraph</p>
+    <div>Lavi rastogi - div</div>
+    <p>Lavi rastogi - paragraph</p>
+    <div>Lavi rastogi - div</div>
+
+    <!-- inline elements -->
+    Lorem <b style="background: yellow">dddddddddddddddddddd</b> <i>dolor</i>
+    <s>sit</s> amet, consectetur adipisicing elit.<u>Aperiam</u> lavi
+    <small>reprehenderit</small> ?
+    <span>manu</span>
+
+    <hr />
+    <hr />
+    <hr />
+
+    <!-- block elemnt - nest - inline -->
+    <h1>Lavi rastogi block <i>Front end developer</i></h1>
+    <i
+      >Lavi rastogi inline
+      <h1>Front end developer</h1></i
+    >
   </body>
 </html>
