--- a/secondLecture.html
+++ b/secondLecture.html
@@ -22,10 +22,12 @@
       elit.<u>Aperiam</u> lavi <small>reprehenderit</small> ?
     </p>
 
-    <b
-      >Lavi
-      <p>Front end devloper</p>
-    </b>
+       
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque minima
+      ullam nesciunt earum rerum magni ex cupiditate maxime
+    </p>
+    <span>Lavi Rastogi</span>
 
     <!-- text emphasis -->
     <p>
@@ -55,61 +57,6 @@
     <!-- inline elements -->
     Lorem <b>ipsum</b> <i>dolor</i> <s>sit</s> amet, consectetur adipisicing
     elit.<u>Aperiam</u> lavi <small>reprehenderit</small> ?
-
-    <hr />
-  </body>
-  <body>
-    <h1>Second html class</h1>
-    <h1>Hi Lavi</h1>
-    <h2>Hi Lavi</h2>
-    <h3>Hi Lavi</h3>
-    <h4>Hi Lavi</h4>
-    <h5>Hi Lavi</h5>
-    <h6>Hi Lavi</h6>
-
-    <!-- paragraph -->
-
-    <!-- formatting text -->
-    <p>
-      Lorem <b>ipsum</b> <i>dolor</i> <s>sit</s> amet, consectetur adipisicing
-      elit.<u>Aperiam</u> lavi <small>reprehenderit</small> ?
-    </p>
-
-    <b
-      >Lavi
-      <p>Front end devloper</p>
-    </b>
-
-    <!-- text emphasis -->
-    <p>
-      <strong>Lorem</strong> ipsum <em>dolor</em>, <mark>sit</mark> amet
-      consectetur <ins>adipisicing</ins> elit. <del>Nostrum</del> vitae facere
-      maxime blanditiis <sup>eaque</sup> ullam <sub>ea</sub> consequatur esse,
-      id expedita.
-    </p>
-
-    <!-- block elements  -->
-    <p style="background: red">Lavi rastogi - paragraph</p>
-    <div>Lavi rastogi - div</div>
-
-    <span style="background: yellow">
-      chhavi rastogi
-      <div style="background: pink">paragraph</div>
-      Lavi rastogi - paragraph <b>ddd</b></span
-    >
-    <div>Lavi rastogi - div</div>
-    <p>Lavi rastogi - paragraph</p>
-    <div>Lavi rastogi - div</div>
-    <p>Lavi rastogi - paragraph</p>
-    <div>Lavi rastogi - div</div>
-    <p>Lavi rastogi - paragraph</p>
-    <div>Lavi rastogi - div</div>
-
-    <!-- inline elements -->
-    Lorem <b style="background: yellow">dddddddddddddddddddd</b> <i>dolor</i>
-    <s>sit</s> amet, consectetur adipisicing elit.<u>Aperiam</u> lavi
-    <small>reprehenderit</small> ?
-    <span>manu</span>
 
     <hr />
     <hr />
