--- a/fourthLecture.html
+++ b/fourthLecture.html
@@ -6,33 +6,42 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- line break -->
-    <span>Lavi Rastogi</span>
-    <br />
-    <span>Frontend developer</span>
+    <!-- image external -->
+    <img
+      src="https://images.unsplash.com/photo-1530631673369-bc20fdb32288?q=80&w=1780&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+      alt="Default text"
+      width="400"
+      height="300"
+    />
 
-    <!-- horizonatal line -->
+    <!-- internal image -->
+    <img src="./photo/burgr.jpg" alt="Default text" width="400" height="300" />
 
-    <p>Hello lavi rastogi as a teacher</p>
-    <hr />
-    <p>Hello lavi rastogi as a developer</p>
+    <h1>
+      &Abreve; &Acirc; &smile; &copy; &dollar; &GreaterEqualLess;
+      &#x1F601;Copyright
+    </h1>
 
-    <!-- HTML enties -->
-
-    <table>
-      <tr>
-        <th>CELL1</td>
-        <th>Cell2</td>
-      </tr>
-
-      <tr>
-        <td>row 1 - cell 1</td>
-        <td>row 1 - cell 2</td>
-      </tr>
-      <tr>
-        <td>row 2 - cell 1</td>
-        <td>row 2 - cell 2</td>
-      </tr>
-    </table>
+    <!-- iframe -->
+    <iframe
+      width="560"
+      height="315"
+      src="https://www.youtube.com/embed/QSikol_KphA?si=2Gz6-b-L6V8B_u34"
+      title="YouTube video player"
+      frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      referrerpolicy="strict-origin-when-cross-origin"
+      allowfullscreen
+    ></iframe>
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d55625.35690528093!2d79.41398480057252!3d29.382443840663605!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39a0a1bc28fd9d61%3A0x7cae7ba916987db3!2sNainital%2C%20Uttarakhand!5e0!3m2!1sen!2sin!4v1732293558945!5m2!1sen!2sin"
+      width="100"
+      height="100"
+      style="border: 0"
+      allowfullscreen=""
+      loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"
+    ></iframe>
+    <iframe src="https://www.devreadyacademy.com/"></iframe>
   </body>
 </html>
