--- a/tables.html
+++ b/tables.html
@@ -14,6 +14,11 @@
       </tr>
       <tr>
         <td>row 2 - cell 1</td>
+        <td>row 2 - cell 2</td>
+        <td>row 2 - cell 3</td>
+      </tr>
+      <tr>
+        <td colspan="2">row 2 - cell 1</td>
         <td>row 2 - cell 3</td>
       </tr>
     </table>
